# actix-web-blog

./: Cargo.toml  LICENSE  README.md
src/: main.rs
static/: posts.html
static/css/: style.css
